--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="#">Conocenos</a></li>
+            <li><a href="#">Nosotros</a></li>
             <li><a href="encuentranos.html">Encuentranos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
