Implementado menu hamburguesa en index.html para dispositivos small

--- a/contacto.html
+++ b/contacto.html
@@ -7,18 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css"> <!-- Hoja de estilos CSS -->
     <link rel="icon" href="favicon.ico" type="image/x-icon"><!-- Favicon -->
-    <!--Libreria de animaciones-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <!--Librería de iconos-->
+    <!--Libreria de animaciones-->
     <script src="https://kit.fontawesome.com/77144f48c5.js" crossorigin="anonymous"></script>
-    <!-- Bootstrap CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <!-- Bootstrap JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-        crossorigin="anonymous"></script>
-
+    <!--Librería de iconos-->
     <title>Mister Latita</title>
 </head>
 
@@ -34,34 +26,28 @@
                 <p>Almac&eacute;n de Bebidas</p>
             </div>
         </div>
+        
+        <div class="navbar-container">
+            <input type="checkbox" id="menu-check">
+            <label id="menu" for="menu-check">
+                <span id="menu-abrir">&#9776;</span>
+                <span id="menu-cerrar">X</span>
+            </label>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="encuentranos.html">Encuentranos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="#">Nosotros</a></li>
-            <li><a href="encuentranos.html">Encuentranos</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
+
 
     <main class="main-container">
-        <div class="redes">
-            <div class="redes-container">
-                <ul>
-                    <li><a class="facebook" href="https://www.facebook.com/elsrdelalatita" target="_blank"><i
-                                class="fa-brands fa-facebook"></i></a></li>
-                    <li><a class="instagram" href="https://www.instagram.com/misterlatita/" target="_blank"><i
-                                class="fa-brands fa-instagram"></i></a></li>
-                    <li><a class="whatsapp" href="https://api.whatsapp.com/send?phone=5493425317987" target="_blank"><i
-                                class="fa-brands fa-whatsapp"></i></a></li>
-                </ul>
-            </div>
-        </div>
 
-        <div class="form-contact">
-
-        </div>
     </main>
 
 
