--- a/encuentranos.html
+++ b/encuentranos.html
@@ -7,11 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css"> <!-- Hoja de estilos CSS -->
     <link rel="icon" href="favicon.ico" type="image/x-icon"><!-- Favicon -->
-    <!--Libreria de animaciones-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <!--Librería de iconos-->
+    <!--Libreria de animaciones-->
     <script src="https://kit.fontawesome.com/77144f48c5.js" crossorigin="anonymous"></script>
-    
+    <!--Librería de iconos-->
     <title>Mister Latita</title>
 </head>
 
@@ -27,19 +26,28 @@
                 <p>Almac&eacute;n de Bebidas</p>
             </div>
         </div>
+        
+        <div class="navbar-container">
+            <input type="checkbox" id="menu-check">
+            <label id="menu" for="menu-check">
+                <span id="menu-abrir">&#9776;</span>
+                <span id="menu-cerrar">X</span>
+            </label>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="encuentranos.html">Encuentranos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="#">Nosotros</a></li>
-            <li><a href="encuentranos.html">Encuentranos</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
+
 
     <main class="main-container">
- 
+
     </main>
 
 
