--- a/index.html
+++ b/index.html
@@ -26,16 +26,24 @@
                 <p>Almac&eacute;n de Bebidas</p>
             </div>
         </div>
+
+        <div class="navbar-container">
+            <input type="checkbox" id="menu-check">
+            <label id="menu" for="menu-check">
+                <span id="menu-abrir">&#9776;</span>
+                <span id="menu-cerrar">X</span>
+            </label>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="encuentranos.html">Encuentranos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="#">Nosotros</a></li>
-            <li><a href="encuentranos.html">Encuentranos</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
 
     <main class="main-container">
         <section class="details-container">
@@ -76,16 +84,21 @@
 
             <div class="products">
                 <div class="products-element"><img src="img/products/campari.webp" alt="Campari"></div>
-                <div class="products-element"><img src="img/products/fernet-branca-1.webp" alt="Fernet Branca 1lt"></div>
+                <div class="products-element"><img src="img/products/fernet-branca-1.webp" alt="Fernet Branca 1lt">
+                </div>
                 <div class="products-element"><img src="img/products/gancia.webp" alt="Gancia 1lt"></div>
                 <div class="products-element"><img src="img/products/lata-bra.webp" alt="Cerveza lata Brahama"></div>
                 <div class="products-element"><img src="img/products/lata-bud.webp" alt="Cerveza lata Budweiser"></div>
                 <div class="products-element"><img src="img/products/lata-hei.webp" alt="Cerveza lata Heineken"></div>
-                <div class="products-element"><img src="img/products/lata-im-lager.webp" alt="Cerveza lata Imperial Lager"></div>
-                <div class="products-element"><img src="img/products/lata-sch-negra.webp" alt="Cerveza lata Schneider Negra"></div>
-                <div class="products-element"><img src="img/products/lata-sch-roja.webp" alt="Cerveza lata Schneider Roja"></div>
+                <div class="products-element"><img src="img/products/lata-im-lager.webp"
+                        alt="Cerveza lata Imperial Lager"></div>
+                <div class="products-element"><img src="img/products/lata-sch-negra.webp"
+                        alt="Cerveza lata Schneider Negra"></div>
+                <div class="products-element"><img src="img/products/lata-sch-roja.webp"
+                        alt="Cerveza lata Schneider Roja"></div>
                 <div class="products-element"><img src="img/products/lata-sch.webp" alt="Cerveza lata Schneider"></div>
-                <div class="products-element"><img src="img/products/pinina-ste.webp" alt="Cerveza Pinina Stella Artois"></div>
+                <div class="products-element"><img src="img/products/pinina-ste.webp"
+                        alt="Cerveza Pinina Stella Artois"></div>
                 <div class="products-element"><img src="img/products/sidra-1888.webp" alt="Sidra 1888"></div>
             </div>
         </section>
