Implementacion secciones 'Encuentranos' y 'Conocenos'

--- a/contacto.html
+++ b/contacto.html
@@ -7,10 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css"> <!-- Hoja de estilos CSS -->
     <link rel="icon" href="favicon.ico" type="image/x-icon"><!-- Favicon -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
     <!--Libreria de animaciones-->
-    <script src="https://kit.fontawesome.com/77144f48c5.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
     <!--Librería de iconos-->
+    <script src="https://kit.fontawesome.com/77144f48c5.js" crossorigin="anonymous"></script>
+
     <title>Mister Latita</title>
 </head>
 
@@ -26,7 +29,7 @@
                 <p>Almac&eacute;n de Bebidas</p>
             </div>
         </div>
-        
+
         <div class="navbar-container">
             <input type="checkbox" id="menu-check">
             <label id="menu" for="menu-check">
@@ -46,8 +49,42 @@
 
 
 
-    <main class="main-container">
+    <main class="main-contacto">
+        <div class="container">
+            <div class="redes-container">
+                <ul>
+                    <h2 class="subtitle">Contacto directo</h2>
+                    <div>
+                        <li><a class="whatsapp" href="https://api.whatsapp.com/send?phone=5493425317987"
+                                target="_blank"><i class="fa-brands fa-whatsapp"></i></a></li>
+                        <a href="https://api.whatsapp.com/send?phone=5493425317987" target="_blank">(342)-5317-987</a>
+                    </div>
 
+                    <h2 class="subtitle">Nuestras Redes Sociales</h2>
+                    <div>
+                        <li><a class="facebook" href="https://www.facebook.com/elsrdelalatita" target="_blank"><i
+                                    class="fa-brands fa-facebook"></i></a></li>
+                        <a href="https://www.facebook.com/elsrdelalatita" target="_blank">@elsrdelalatita</a>
+                    </div>
+
+                    <div>
+                        <li><a class="instagram" href="https://www.instagram.com/misterlatita/" target="_blank"><i
+                                    class="fa-brands fa-instagram"></i></a></li>
+                        <a href="https://www.instagram.com/misterlatita/" target="_blank">@misterlatita</a>
+                    </div>
+                </ul>
+            </div>
+        </div>
+
+        <form action="">
+            <h2>ESCRIBINOS</h2>
+            <input type="text" name="nombre" placeholder="Ingrese su Nombre">
+            <input type="text" name="correo" placeholder="Ingrese su Correo Electronico">
+            <input type="text" name="telefono" placeholder="Ingrese su Numero de Telefono">
+            <textarea name="mensaje" placeholder="Escriba aquí su mensaje"></textarea>
+            <input type="button" value="ENVIAR" id="boton">
+
+        </form>
     </main>
 
 
@@ -55,7 +92,7 @@
         <p>Copyright &copy; 2022 - Mister Latita</p>
 
         <!-- Contenedor de iconos con links a redes sociales -->
-        <div class="redes-container">
+        <div class="redes-footer">
             <ul>
                 <li><a class="facebook" href="https://www.facebook.com/elsrdelalatita" target="_blank"><i
                             class="fa-brands fa-facebook"></i></a></li>
