Correccion estilos 'Encuentranos' y 'Contacto', implementada funcionalidad de envio de form con Formspree

--- a/encuentranos.html
+++ b/encuentranos.html
@@ -84,7 +84,7 @@
         <div class="map">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d849.2343670612191!2d-60.65797257082009!3d-31.63556245701441!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5aa372d11442f%3A0x62ea4a1f9a72150f!2sAlejandro%20Greca%201173%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1665855366250!5m2!1ses!2sar"
-                width="600" height="450" style="border: 1px solid black;" allowfullscreen="" loading="lazy"
+                style="border: 1px solid black;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </main>
