--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css"> <!-- Hoja de estilos CSS -->
+    <script src="script.js"></script>
     <link rel="icon" href="favicon.ico" type="image/x-icon"><!-- Favicon -->
 
     <!--Libreria de animaciones-->
@@ -76,14 +77,13 @@
             </div>
         </div>
 
-        <form action="">
-            <h2>ESCRIBINOS</h2>
+        <form id="form" action="https://formspree.io/f/xjvzonwa" method="POST">
+            <h2>ESCRIBENOS</h2>
             <input type="text" name="nombre" placeholder="Ingrese su Nombre">
-            <input type="text" name="correo" placeholder="Ingrese su Correo Electronico">
-            <input type="text" name="telefono" placeholder="Ingrese su Numero de Telefono">
+            <input type="email" name="correo" placeholder="Ingrese su Correo Electronico">
+            <input type="number" name="telefono" placeholder="Ingrese su Numero de Telefono">
             <textarea name="mensaje" placeholder="Escriba aquí su mensaje"></textarea>
-            <input type="button" value="ENVIAR" id="boton">
-
+            <button type="submit" id="boton">ENVIAR</button>
         </form>
     </main>
 
