--- a/nosotros.html
+++ b/nosotros.html
@@ -24,4 +24,5 @@
         <div class="texto">
             <p> Somos Mister Latita una pequeña distribuidora de bebidas con el objetivo de que no vayas por todos lados intentando encontrar costos económicos, sino que compres todo en un mismo sitio, con tranquilidad y confianza. La atención personalizada y el trato cordial son las bases de nuestro compromiso, combinando las ganas de brindar un servicio conveniente a todos nuestros propios consumidores.
               </p>
-              
+  </body>
+</html>
