subiendo las validaciones y agregando en los input de nombre y telefono del formulario los atributos pattern y title

--- a/contacto.html
+++ b/contacto.html
@@ -79,9 +79,9 @@
 
         <form id="form" action="https://formspree.io/f/xjvzonwa" method="POST">
             <h2>ESCRIBENOS</h2>
-            <input type="text" name="nombre" placeholder="Ingrese su Nombre">
+            <input type="text" name="nombre" placeholder="Ingrese su Nombre" pattern="[a-zA-ZÀ-ÿ ]+" title="Sólo Podés Ingresar Letras Mayúsculas, Minúsculas con Acento y Espacios">
             <input type="email" name="correo" placeholder="Ingrese su Correo Electronico">
-            <input type="number" name="telefono" placeholder="Ingrese su Numero de Telefono">
+            <input type="number" name="telefono" placeholder="Ingrese su Numero de Telefono" pattern="[0-9]+" title="Sólo Podés Ingresar Números">
             <textarea name="mensaje" placeholder="Escriba aquí su mensaje"></textarea>
             <button type="submit" id="boton">ENVIAR</button>
         </form>
