--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css"> <!-- Hoja de estilos CSS -->
-    <script src="script.js"></script>
+    <!--<script src="script.js"></script>-->
     <link rel="icon" href="favicon.ico" type="image/x-icon"><!-- Favicon -->
 
     <!--Libreria de animaciones-->
