--- a/nosotros.html
+++ b/nosotros.html
@@ -2,27 +2,38 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css"> <!-- Hoja de estilos CSS -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon"><!-- Favicon -->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/estilos.css"> <!-- Hoja de estilos CSS -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon"><!-- Favicon -->
 
-    <!--Libreria de animaciones-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <!--Libreria de animaciones-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-    <!--Librería de iconos-->
-    <script src="https://kit.fontawesome.com/77144f48c5.js" crossorigin="anonymous"></script>
+  <!--Librería de iconos-->
+  <script src="https://kit.fontawesome.com/77144f48c5.js" crossorigin="anonymous"></script>
 
-    <title>Mister Latita</title>
+  <title>Mister Latita</title>
 </head>
 
 <body class="animate__animated animate__fadeIn">
-    <header id="header"></header>
-    
-      <main class="main-nosotros">
-        <div class="texto">
-            <p> Somos Mister Latita una pequeña distribuidora de bebidas con el objetivo de que no vayas por todos lados intentando encontrar costos económicos, sino que compres todo en un mismo sitio, con tranquilidad y confianza. La atención personalizada y el trato cordial son las bases de nuestro compromiso, combinando las ganas de brindar un servicio conveniente a todos nuestros propios consumidores.
-              </p>
-  </body>
+  <header id="header"></header>
+
+  <main class="main-nosotros">
+    <div class="texto">
+      <p> Somos Mister Latita una pequeña distribuidora de bebidas con el objetivo de que no vayas por todos lados
+        intentando encontrar costos económicos, sino que compres todo en un mismo sitio, con tranquilidad y confianza.
+        La atención personalizada y el trato cordial son las bases de nuestro compromiso, combinando las ganas de
+        brindar un servicio conveniente a todos nuestros propios consumidores.
+      </p>
+    </div>
+  </main>
+
+  <footer id="footer"></footer>
+
+  <script src="js/template-header.js"></script>
+  <script src="js/template-footer.js"></script>
+</body>
+
 </html>
