Modificaciones, estilos y MediaQueries en nosotros.html

--- a/nosotros.html
+++ b/nosotros.html
@@ -22,11 +22,19 @@
 
   <main class="main-nosotros">
     <div class="texto">
-      <p> Somos Mister Latita una pequeña distribuidora de bebidas con el objetivo de que no vayas por todos lados
-        intentando encontrar costos económicos, sino que compres todo en un mismo sitio, con tranquilidad y confianza.
-        La atención personalizada y el trato cordial son las bases de nuestro compromiso, combinando las ganas de
-        brindar un servicio conveniente a todos nuestros propios consumidores.
+      <p>Somos Mister Latita una pequeña distribuidora de bebidas con el objetivo de que no vayas por todos lados
+        intentando encontrar precios bajos, sino que compres todo en un mismo sitio, con tranquilidad y confianza.
+        La atenci&oacute;n personalizada y el trato cordial son las bases de nuestro compromiso, brindando un servicio
+        destacado a todos nuestros clientes.</p>
+
+      <p>Conocemos el mercado y es por eso que nos animamos a montar nuestra versi&oacute;n digital, en el año 2022 dimos
+        inicio a nuestra propia P&aacute;gina Web, desde donde podes contactarte con nostros y hacer tu pedido online
+        via WhatsApp desde la comodidad de tu hogar.
       </p>
+    </div>
+
+    <div class="sello">
+      <img src="img/sello-calidad.png" alt="Sello Calidad">
     </div>
   </main>
 
